# haitaka

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs
benches/: legals.rs  perft.rs  slider_moves.rs
examples/: perft.rs
haitaka/: Cargo.toml  README.md  build.rs
haitaka/benches/: legals.rs  perft.rs
haitaka/examples/: find_black_magics.rs  find_magics.rs  perft.rs
haitaka/src/: attacks.rs  lib.rs  slider_moves.rs
haitaka/src/board/: mod.rs  parse.rs  validate.rs  zobrist.rs
haitaka/src/board/movegen/: mod.rs  piece_moves.rs  tests.rs
haitaka/src/board/test_data/: invalid.sfens  valid.sfens
haitaka_types/: Cargo.toml  README.md
haitaka_types/src/: bitboard.rs  color.rs  file.rs  helpers.rs  lib.rs  piece.rs  rank.rs  shogi_move.rs  square.rs
haitaka_types/src/sliders/: common.rs  magic.rs  mod.rs
src/: attacks.rs  bitboard.rs  color.rs  file.rs  helpers.rs  lib.rs  main.rs  moves.rs  piece.rs  rank.rs  shogi_move.rs  sliders.rs  square.rs
src/board/: builder.rs  mod.rs  parse.rs  validate.rs  zobrist.rs
src/board/movegen/: mod.rs  piece_moves.rs  tests.rs
src/board/test_data/: valid.sfens
src/sliders/: magic.rs
