[package]
name = "sparrow"
version = "0.1.0"
edition = "2024"
authors = ["tofutofu <tofutofu@users.noreply.github.com>"]

license = "MIT"
description = "Rust Shogi move generation library"
homepage = "https://github.com/tofutofu/sparrow"
repository = "https://github.com/tofutofu/sparrow"
keywords = ["shogi", "no_std"]
categories = ["games", "no-std"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.bench]
opt-level = 3
codegen-units = 1
lto = "fat"

[[bench]]
name = "legals"
harness = false

[[bench]]
name = "slider_moves"
harness = false

[features]
std = []
